[package]
name = "rocket_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
bmp085 = "0.1.1"
i2cdev = "0.3.2"
bno055 = "0.3.3"
quaternion-core = "0.3.4"
linux-embedded-hal = "0.3.2"
adafruit_gps = "0.4.1"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
